Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48547

Canvas3D crashes on destruction if it has no visual parent

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 Beta
    • 5.5.1
    • Canvas3D
    • None
    • 3534d9a6fa7d1d2034963732e22081182864ae83

      Canvas3D destructor expects there to be a visual parent, but there are cases where a dynamically created Canvas3D component may be live without any current visual parent. Exiting the application during this will cause a crash.

        For Gerrit Dashboard: QTBUG-48547
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            pakerane Pasi Keränen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes