Fixes issue with crash on destruction when no visual parent.

Fixes crashing of Canvas3D destructor on exit when it has no visual parent
assigned.

Change-Id: I198ef26a29a6a2bb90a05298487761e786f4d4b1
Task-number: QTBUG-48547
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@theqtcompany.com>